# agent-audit-sandbox

./: .gitignore  README.md  policy_config.json  pyproject.toml
data/fixtures/: hidden_instruction_report.txt  injected_report.txt  normal_report.txt
docs/: limitations.md  methodology.md  next-experiments.md  research-question.md  results.md  threat-model.md
examples/: demo.py
src/agent_audit_sandbox/: __init__.py  agent.py  config.py  context.py  logger.py  policy.py  registry.py  scanner.py  validation.py
tests/: test_actors_tools.py  test_config_validation.py  test_prompt_injection.py  test_sandbox.py
