[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_audit_sandbox"
version = "0.1.0"
description = "A toy AI agent sandbox demonstrating action logging, policy checks, and safety blocking."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
